--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,33 @@
-/tmp
-RegT2E.pdf
-*.synctex
-
-*.preview.pdf
+tmp/*
+RegT2.pdf
+*.acn
+*.acr
+*.alg
 *.aux
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
 *.log
+*.lot
+*.maf
+*.mtc
+*.mtc0
+*.nav
+*.nlo
 *.out
+*.pdfsync
+*.ps
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdy
